// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generated files are commited if commitGenerated is true 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/my.txt
"
`;

exports[`generated files are commited if commitGenerated is undefined 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/my.txt
"
`;

exports[`generated files are ignored from git if commitGenerated is false 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
/my.txt
"
`;
